added more sections

--- a/en/PerSona2019/slides/slides.tex
+++ b/en/PerSona2019/slides/slides.tex
@@ -91,148 +91,149 @@
 	\titlepage
 \end{frame}
   
-\section{Premessa e Digressione}
+\section[Emotions]{Emotions and Music}
+% 
+% \begin{frame}
+%    \frametitle<+->{Piccola premessa (e digressione)}
+% 
+%    \begin{Large}
+%      \uncover<+->{Di che musica parleremo?}\\[\baselineskip]
+%      \uncover<+->{I generi musicali non esistono.}\\[\baselineskip]
+%      \uncover<+->{Esistono per\`o le \emph{FUNZIONI} musicali}
+%    \end{Large}
+% 
+% \end{frame}
 
-\begin{frame}
-   \frametitle<+->{Piccola premessa (e digressione)}
-
-   \begin{Large}
-     \uncover<+->{Di che musica parleremo?}\\[\baselineskip]
-     \uncover<+->{I generi musicali non esistono.}\\[\baselineskip]
-     \uncover<+->{Esistono per\`o le \emph{FUNZIONI} musicali}
-   \end{Large}
-
-\end{frame}
-
-\begin{frame}
-   \frametitle<+->{Funzioni Musicali}
-
-   \uncover<+->{Rito}\\[\baselineskip]
-   \uncover<+->{Intrattenimento}\\[\baselineskip]
-   \begin{Large}
-      \uncover<+->{\emph{SPECULAZIONE INTELLETTUALE}}
-   \end{Large}
-\end{frame}
-
-
-\section{Musica e Numero}
-
-\begin{frame}
-   \frametitle<+->{La fascinazione numerica}
-
-   \uncover<+->{I suoni sono ``pieni'' di numeri}\\[\baselineskip]
-   \uncover<+->{I numeri ``cantano''}\\[\baselineskip]
-   \uncover<+->{\listento{\exampledir/Nozze_aria1-frammento.ogg}{}}
-
-
-\end{frame}
-
-\begin{frame}
-   \frametitle<+->{I numeri nella composizione}
-
-   \uncover<+->{Molta ``tecnologia numerica'' semplice (permutazione, inversione,
-   retrogradazione, ecc.) \`e da sempre utilizzata in musica}\\[\baselineskip]
-   \uncover<+->{\listento{\exampledir/Berio_Requies-frammento.ogg}{Esempio: Luciano Berio - \emph{Requies} (1984)}}
-
-\end{frame}
-
-\section{Musica e/\`e Scienza}
-
-\begin{frame}
-   \frametitle<+->{Musica \emph{\`e} Scienza?}
-
-   \begin{itemize}[<+->]
-      \item La Musica \`e un'attivit\`a artistica:
-        \begin{itemize}[<+->]
-           \item completamente \emph{arbitraria}
-           \item guidata solo da criteri estetici
-        \end{itemize}
-     \item Una ``scienza'' della composizione musicale non esiste
-   \end{itemize}
-
-   % perch\'e insistiamo nel unire musica e scienza?
-
-\end{frame}
-
-\section{La Musica Elettronica}
-
-\begin{frame}
-   \frametitle<+->{La Musica Elettronica}
-
-   \begin{itemize}[<+->]
-
-      \item L'introduzione delle tecnologie elettroniche (prima analogiche poi
-              digitali) in musica cambia sostanzialmente i paradigmi
-              compositivi
-
-      \item I compositori affrontano dimensioni parametriche continue
-
-      \item La Matematica diventa uno strumento utile per la composizione
-
-   \end{itemize}
-
-   % disclaimer: a scelta strumentale delle ``tecnologie matematiche'' rimane
-   % comunque arbitraria;
-   % bella matematica per brutta musica e viceversa
-
-\end{frame}
-
-\section{La L\'egende d'Eer}
-
-\begin{frame}
-        \frametitle<+->{Iannis Xenakis -- 1922--2001}
-
-   \begin{itemize}[<+->]
-
-      \item Xenakis combina una tripla formazione: ingegnere, architetto,
-            compositore
-
-     \item fascinazione dall'approccio scientifico all'investigazione della
-             natura 
-
-     \item utilizzo estensivo di funzioni di distribuzione statistica
-
-     % mettere in contesto: dodecafonia -> serialismo integrale, aleatoriet\`a
-     % Cageana, approccio di Xenakis
-   \end{itemize}
-
-\end{frame}
-
-\begin{frame}
-   \frametitle<+->{\LLdE (1977-1978)}
-
-   \begin{itemize}[<+->]
-
-      \item Commissionato per l'inaugurazione del \emph{Centre Georges Pompidou}
-
-      \item Parte di un progetto pi\`u ampio di \emph{gesamtkunstwerk}, il
-              \emph{Diatope} (una struttura architettonica con 1680 fari, 400
-              specchi e 4 laser)
-
-      \item Immaginato come un'immersione del pubblico in un oceano di suoni
-
-
-   \end{itemize}
-
-\end{frame}
-
-{\Large Funzioni Musicali}
-
-\begin{itemize}
-
-        \item Speculazione: funzione primaria riconosciuta dai Greci (cit. Platone
-              Repubblica), Boezio e Cassiodoro -> Quadrivium: aritmetica (numeri),
-              geometria (numeri nello spazio), musica (numeri nel tempo), astronomia
-              (numeri nello spazio e nel tempo)
-        \item musica theoretica e musica practica (scontro tra i teorici,
-                Vincenzo Galilei, i fratelli Monteverdi, ecc.)
-        \item importanza della riproducibilit\`a: tradizione orale favorisce l'esecuzione, la scrittura favorisce la costruzione
-                architettonica: Beethoven e seguenti; la riproducibilit\`a dei
-                suoni restaura la supremazia dell'esecuzione (e stabilisce un
-                mercato)
-
-
-\end{itemize}
+\section[Physics]{The physics of sound}
+% \begin{frame}
+%    \frametitle<+->{Funzioni Musicali}
+% 
+%    \uncover<+->{Rito}\\[\baselineskip]
+%    \uncover<+->{Intrattenimento}\\[\baselineskip]
+%    \begin{Large}
+%       \uncover<+->{\emph{SPECULAZIONE INTELLETTUALE}}
+%    \end{Large}
+% \end{frame}
+% 
+% 
+% \section{Musica e Numero}
+% 
+% \begin{frame}
+%    \frametitle<+->{La fascinazione numerica}
+% 
+%    \uncover<+->{I suoni sono ``pieni'' di numeri}\\[\baselineskip]
+%    \uncover<+->{I numeri ``cantano''}\\[\baselineskip]
+%    \uncover<+->{\listento{\exampledir/Nozze_aria1-frammento.ogg}{}}
+% 
+% 
+% \end{frame}
+% 
+% \begin{frame}
+%    \frametitle<+->{I numeri nella composizione}
+% 
+%    \uncover<+->{Molta ``tecnologia numerica'' semplice (permutazione, inversione,
+%    retrogradazione, ecc.) \`e da sempre utilizzata in musica}\\[\baselineskip]
+%    \uncover<+->{\listento{\exampledir/Berio_Requies-frammento.ogg}{Esempio: Luciano Berio - \emph{Requies} (1984)}}
+% 
+% \end{frame}
+% 
+\section[Semantics]{Sound and Sense}
+% 
+% \begin{frame}
+%    \frametitle<+->{Musica \emph{\`e} Scienza?}
+% 
+%    \begin{itemize}[<+->]
+%       \item La Musica \`e un'attivit\`a artistica:
+%         \begin{itemize}[<+->]
+%            \item completamente \emph{arbitraria}
+%            \item guidata solo da criteri estetici
+%         \end{itemize}
+%      \item Una ``scienza'' della composizione musicale non esiste
+%    \end{itemize}
+% 
+%    % perch\'e insistiamo nel unire musica e scienza?
+% 
+% \end{frame}
+% 
+\section[Worth]{Worthwhile Endeavors}
+% 
+% \begin{frame}
+%    \frametitle<+->{La Musica Elettronica}
+% 
+%    \begin{itemize}[<+->]
+% 
+%       \item L'introduzione delle tecnologie elettroniche (prima analogiche poi
+%               digitali) in musica cambia sostanzialmente i paradigmi
+%               compositivi
+% 
+%       \item I compositori affrontano dimensioni parametriche continue
+% 
+%       \item La Matematica diventa uno strumento utile per la composizione
+% 
+%    \end{itemize}
+% 
+%    % disclaimer: a scelta strumentale delle ``tecnologie matematiche'' rimane
+%    % comunque arbitraria;
+%    % bella matematica per brutta musica e viceversa
+% 
+% \end{frame}
+% 
+\section[Taiagar\`u]{A case study: {\it Taiagar\`u} by Giacinto Scelsi}
+% 
+% \begin{frame}
+%         \frametitle<+->{Iannis Xenakis -- 1922--2001}
+% 
+%    \begin{itemize}[<+->]
+% 
+%       \item Xenakis combina una tripla formazione: ingegnere, architetto,
+%             compositore
+% 
+%      \item fascinazione dall'approccio scientifico all'investigazione della
+%              natura 
+% 
+%      \item utilizzo estensivo di funzioni di distribuzione statistica
+% 
+%      % mettere in contesto: dodecafonia -> serialismo integrale, aleatoriet\`a
+%      % Cageana, approccio di Xenakis
+%    \end{itemize}
+% 
+% \end{frame}
+% 
+% \begin{frame}
+%    \frametitle<+->{\LLdE (1977-1978)}
+% 
+%    \begin{itemize}[<+->]
+% 
+%       \item Commissionato per l'inaugurazione del \emph{Centre Georges Pompidou}
+% 
+%       \item Parte di un progetto pi\`u ampio di \emph{gesamtkunstwerk}, il
+%               \emph{Diatope} (una struttura architettonica con 1680 fari, 400
+%               specchi e 4 laser)
+% 
+%       \item Immaginato come un'immersione del pubblico in un oceano di suoni
+% 
+% 
+%    \end{itemize}
+% 
+% \end{frame}
+% 
+% {\Large Funzioni Musicali}
+% 
+% \begin{itemize}
+% 
+%         \item Speculazione: funzione primaria riconosciuta dai Greci (cit. Platone
+%               Repubblica), Boezio e Cassiodoro -> Quadrivium: aritmetica (numeri),
+%               geometria (numeri nello spazio), musica (numeri nel tempo), astronomia
+%               (numeri nello spazio e nel tempo)
+%         \item musica theoretica e musica practica (scontro tra i teorici,
+%                 Vincenzo Galilei, i fratelli Monteverdi, ecc.)
+%         \item importanza della riproducibilit\`a: tradizione orale favorisce l'esecuzione, la scrittura favorisce la costruzione
+%                 architettonica: Beethoven e seguenti; la riproducibilit\`a dei
+%                 suoni restaura la supremazia dell'esecuzione (e stabilisce un
+%                 mercato)
+% 
+% 
+% \end{itemize}
 
 
 \end{document}
